till Shop Now Slider

--- a/assets/our-cat.css
+++ b/assets/our-cat.css
@@ -90,7 +90,7 @@ div.scroll-container3::-webkit-scrollbar {
   margin: auto;
 }
 
-.add-to-cart:hover {
+.add-to-cart2:hover {
   background: radial-gradient(#748c3c, #5f7728, #4b5e1e);
   color: #fff;
 }
