--- a/sections/our-cat.liquid
+++ b/sections/our-cat.liquid
@@ -10,42 +10,42 @@
     <div class="cat-title">
       Skin Care
     </div>
-    <button class="add-to-cart2">Add to Cart</button>
+    <button class="add-to-cart2">Shop Now</button>
   </div>
 <div class="product2">
     <img width=""  height=""  class="product-img" src="{{ 'product1.png' | asset_url }}" alt="Cinque Terre">
     <div class="cat-title">
       Skin Care
     </div>
-    <button class="add-to-cart2">Add to Cart</button>
+    <button class="add-to-cart2">Shop Now</button>
   </div>
 <div class="product2">
     <img width=""  height=""  class="product-img" src="{{ 'product1.png' | asset_url }}" alt="Cinque Terre">
     <div class="cat-title">
       Skin Care
     </div>
-    <button class="add-to-cart2">Add to Cart</button>
+    <button class="add-to-cart2">Shop Now</button>
   </div>
 <div class="product2">
     <img width=""  height=""  class="product-img" src="{{ 'product1.png' | asset_url }}" alt="Cinque Terre">
     <div class="cat-title">
       Skin Care
     </div>
-    <button class="add-to-cart2">Add to Cart</button>
+    <button class="add-to-cart2">Shop Now</button>
   </div>
 <div class="product2">
     <img width=""  height=""  class="product-img" src="{{ 'product1.png' | asset_url }}" alt="Cinque Terre">
     <div class="cat-title">
       Skin Care
     </div>
-    <button class="add-to-cart2">Add to Cart</button>
+    <button class="add-to-cart2">Shop Now</button>
   </div>
 <div class="product2">
     <img width=""  height=""  class="product-img" src="{{ 'product1.png' | asset_url }}" alt="Cinque Terre">
     <div class="cat-title">
       Skin Care
     </div>
-    <button class="add-to-cart2">Add to Cart</button>
+    <button class="add-to-cart2">Shop Now</button>
   </div>
     </div>
   <img  width=""  height="" src="{{ 'right.png' | asset_url }}" class="scroll-arrow" id="left-arrow3" alt="Scroll Left">
@@ -61,14 +61,14 @@
 <script>
   document.getElementById('left-arrow3').addEventListener('click', function() {
   document.querySelector('.scroll-container3').scrollBy({
-    left: -380, // Adjust this value to match the width of a product card plus margin
+    left: 380, // Adjust this value to match the width of a product card plus margin
     behavior: 'smooth'
   });
 });
 
 document.getElementById('right-arrow3').addEventListener('click', function() {
   document.querySelector('.scroll-container3').scrollBy({
-    left: 380, // Adjust this value to match the width of a product card plus margin
+    left: -380, // Adjust this value to match the width of a product card plus margin
     behavior: 'smooth'
   });
 });
