till cert Slider

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -2,4 +2,5 @@
 {%  section   'product-slider' %}
 {%  section  'new-arrivels' %}
 {%  section 'our-cat' %}
+{%  section 'our-cert' %}
 {% comment %} {% section 'index' %} {% endcomment %}
