Our cert section complete

--- a/sections/our-cert.liquid
+++ b/sections/our-cert.liquid
@@ -21,24 +21,24 @@
   font-size: 40px;
   font-weight: 400;
   display: flex;
+  color: #1E2B00;
   flex-direction: column;
 }
-.slider-title p {
-	font-family: Montserrat,sans-serif;
-	font-size: 20px;
-  color: #616161;
-}
+
 .cert-img-container {
-	width: 81dvw;
+	width: 100dvw;
 	margin: auto;
 	height: 300px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	background: rgba(93,90,27 ,.2);
+	padding: 0 10vw;
 }
 .cert-img-container h2{
     font-family: Montserrat,sans-serif;
     font-size: 20px;
+
     font-weight: normal;
 }
 .cert-img-box{
@@ -52,15 +52,14 @@
 }
 .cert-img {
 	width: 200px;
-	height: 200px;
+	height: 200px; 
 	border-radius: 50%;
 }
 </style>
 
 <div class="cert-box">
     <div class="slider-title">
-    <p>Explore</p>
-    <h2>Our Categories</h2>
+    <h2>Our Certificates</h2>
 </div>
 
 <div class="cert-img-container">
