--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -3,4 +3,7 @@
 {%  section  'new-arrivels' %}
 {%  section 'our-cat' %}
 {%  section 'our-cert' %}
+{%  section 'discover' %}
+{%  section 'testomonial' %}
+
 {% comment %} {% section 'index' %} {% endcomment %}
