--- a/sections/our-cert.liquid
+++ b/sections/our-cert.liquid
@@ -1,9 +1,9 @@
 <style>
-    .cert-box{
-        height: 450px;
-        width: 100dvw;
-        border: 1px solid gray;
-    }
+ .cert-box {
+	height: 450px;
+	width: 100dvw;
+	margin-top: 50px;
+}
     .slider-title {
 	width: 81vw;
 	margin: 20px auto;
