--- a/sections/testomonial.liquid
+++ b/sections/testomonial.liquid
@@ -49,11 +49,12 @@
 </div>
 <!-- CSS -->
 <style>
-	.testo-section{
-		width: 81dvw;
-		margin: auto;
-		height: 500px;
-	}
+.testo-section {
+	width: 81dvw;
+	margin: auto;
+	height: 500px;
+	margin-top: 50px;
+}
 .testimonial-section {
 	display: flex;
 	align-items: center;
