--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,3 +1,254 @@
+<style>
+footer {
+	height: 550px;
+	background: #4B5E1E;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+  margin-top: 60px;
+}
+  .footer-container{
+    width: 85%;
+    height: 85%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .subscribe {
+	width: 30%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
+.footer-details {
+	width: 65%;
+	height: 100%;
+	/* background: red; */
+	display: flex;
+	align-items: center;
+}
+.footer-hr {
+	width: 90%;
+	margin: 10px auto;
+	border: 1px solid white;
+}
+  .footer-logo{
+    width: 260px;
+    display: block;
+  }
+  .footer-payment-logo{
+    width: auto;
+    height: 30px;
+
+  }
+  .subscribe a{
+    width: 260px;
+  }
+  .email-box{
+	height: 90px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	width: 95%;
+  }
+  .email-box-form {
+	width: 95%;
+	background: white;
+	height: 32px;
+	border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.email-box-form input {
+  width: 80%;
+  padding: 0 5px ;
+  height: 100%;
+  border: 0;
+}
+.email-box-form input:focus{
+  outline: 0;
+}
+.email-box-form button {
+	width: 20%;
+	height: 100%;
+	background: transparent;
+	cursor: pointer;
+	font-family: Montserrat,sans-serif;
+	font-size: 12px;
+	border: 0;
+	font-weight: 500;
+}
+.payment-img-box {
+	width: 420px;
+	display: flex;
+	justify-content: space-between;
+}
+
+  .email-box p{
+    font-size: 12px;
+    font-family: Montserrat,sans-serif;
+color: #fff;
+  }
+  .left-info {
+	width: 50%;
+	height: 100px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+.payment-info {
+	width: 85%;
+	margin: 0 auto;
+	height: 100px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+.payment-info h2 {
+	font-size: 12px;
+	color: #fff;
+	font-family: Montserrat,sans-serif;
+	font-weight: bold;
+	padding: 0 7px;
+}
+.footer-details-box {
+  width: 25%;
+	height: 80%;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	/* background: gray; */
+	flex-direction: column;
+}
+
+.footer-services-title {
+	font-family: Montserrat,sans-serif;
+	margin: 30px auto;
+	width: 85%;
+	font-size: 14px;
+	font-weight: bold;
+  color: white;
+}
+.footer-services {
+	height: 70%;
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+	width: 85%;
+  color: white;
+}
+.footer-services a {
+	color: #fff;
+	text-decoration: none;
+	z-index: 1;
+}
+.social-icons {
+	width: 300px;
+	height: 45px;
+	display: flex;
+	justify-content: start;
+	gap: 25px;
+}
+.social-icons img {
+	height: 35px;
+	margin: 0 10px;
+  cursor: pointer;
+}
+.copyright {
+	width: 85dvw;
+	text-align: end;
+	color: white;
+	padding-bottom: 10px;
+}
+</style>
 <footer>
-  <p>&copy; {{ 'now' | date: '%Y' }} Your Store. All rights reserved.</p>
+  <div class="footer-container">
+    <div class="subscribe">
+   <a  href="/">   <img class="footer-logo" src="{{'logo.png' |  asset_url}}" width="" height="" alt=""></a>
+   <div class="email-box">
+     <p>Subscribe for special offers, newsletters and become a part of our family.</p>
+    <form action="" class="email-box-form"><input type="email" placeholder="Type Your email..."> <button type="submit">Submit</button></form>
+   </div>
+    </div>
+  <div class="footer-details">
+  <div class="footer-details-box">
+   <div class="footer-services-title">
+    <p>CHATURA</p>
+   </div>
+    <div class="footer-services">
+     <a href=""><p>Our Essence</p></a>
+     <a href=""><p>Our Core Values</p></a>
+     <a href=""> <p>Our Home: Nature</p></a>
+    <a href=""> <p>Ayurveda & You</p></a>
+    <a href=""><p>Blogs & Articles</p></a>
+    </div>
+  </div>
+  <div class="footer-details-box">
+   <div class="footer-services-title">
+    <p>SHOP BY</p>
+   </div>
+    <div class="footer-services">
+     <a href=""><p>Skin Care</p></a>
+     <a href=""><p>Hair Care</p></a>
+     <a href=""> <p>Makeup</p></a>
+    <a href=""> <p>Body Care</p></a>
+    <a href=""><p>Supplement</p></a>
+    <a href=""><p>Combos</p></a>
+    <a href=""><p>Gifting</p></a>
+    </div>
+  </div>
+  <div class="footer-details-box">
+   <div class="footer-services-title">
+    <p>CUSTOMER SERVICE</p>
+   </div>
+    <div class="footer-services">
+     <a href=""><p>FAQs</p></a>
+     <a href=""><p>Contact Us</p></a>
+     <a href=""> <p>Refund</p></a>
+    <a href=""> <p>Terms & Services</p></a>
+    <a href=""><p>Privacy Policy</p></a>
+    </div>
+  </div>
+  <div class="footer-details-box">
+   <div class="footer-services-title">
+    <p>REACH OUT TO US</p>
+   </div>
+    <div class="footer-services">
+     <a href=""><p>Customer Support</p></a>
+     <a href=""><p>For Business</p></a>
+     <a href=""> <p>Address 01</p></a>
+    <a href=""> <p>Address 02</p></a>
+    <a href=""><p>Contact Us</p></a>
+    </div>
+  </div>
+  
+  </div>
+  </div>
+  <div class="payment-info">
+    <div class="left-info">
+      <h2>PAYMENT ACCEPTED</h2>
+    <div class="payment-img-box">
+      <img class="footer-payment-logo" src="{{'visa.png' |  asset_url}}" width="30px" height="" alt="">
+      <img class="footer-payment-logo"  src="{{'master-card.png' |  asset_url}}" width="30px" height="" alt="">
+      <img class="footer-payment-logo"  src="{{'rupay.png' |  asset_url}}" width="30px" height="" alt="">
+      <img class="footer-payment-logo"  src="{{'gpay.png' |  asset_url}}" width="30px" height="" alt="">
+      <img class="footer-payment-logo"  src="{{'paypal.png' |  asset_url}}" width="30px" height="" alt="">
+     </div>
+    </div>
+     <div class="social-icons">
+      <img class="footer-payment-logo"  src="{{'face.png' |  asset_url}}" width="" height="" alt="">
+      <img class="footer-payment-logo"  src="{{'insta.png' |  asset_url}}" width="" height="" alt="">
+      <img class="footer-payment-logo"  src="{{'youtube.png' |  asset_url}}" width="" height="" alt="">
+     </div>
+  </div>
+
+  <hr class="footer-hr">
+  <p class="copyright">&copy; {{ 'now' | date: '%Y' }} Your Store. All rights reserved.</p>
 </footer>
