--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -5,5 +5,6 @@
 {%  section 'our-cert' %}
 {%  section 'discover' %}
 {%  section 'testomonial' %}
+{%  section 'our-ethos' %}
 
 {% comment %} {% section 'index' %} {% endcomment %}
