--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -26,13 +26,13 @@
   </nav>
   <hr class="nav-hr"> 
   <div class="nav-collection-links">
-<a href="/pages/skin-care">Skin Care <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
-<a href="/pages/hair-care">Hair Care <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
-<a href="/pages/make-up">Make Up <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
-<a href="/pages/body-care">Body Care<img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
-<a href="/pages/supplements">Supplements <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
-<a href="/pages/duscover">Discover Us <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
-<a href="/pages/combos">Combos <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
-<a href="/pages/gift">Gifting<img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
+<a href="/collections/skin-care">Skin Care <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
+<a href="/collections/hair-care">Hair Care <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
+<a href="/collections/make-up">Make Up <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
+<a href="/collections/body-care">Body Care<img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
+<a href="/collections/supplements">Supplements <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
+<a href="/collections/duscover">Discover Us <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
+<a href="/collections/combos">Combos <img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
+<a href="/collections/gift">Gifting<img src="{{'down.png' |  asset_url}}" alt="" width="15px" height="auto"></a>
   </div>
 </header>
