--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -1,17 +1,16 @@
 <div class="product">
-  <h1>{{ product.title }}</h1>
-  <div class="product-images">
+  <a class="product-link" href="{{ product.url }}"> 
     {% for image in product.images %}
-      <img width="" height="" src="{{ image.src | img_url: 'large' }}" alt="{{ image.alt | escape }}">
+      <img class="product-img" width="" height="" src="{{ image.src | img_url: 'large' }}" alt="{{ image.alt | escape }}">
     {% endfor %}
-  </div>
-  <div class="product-details">
-    <p>{{ product.description }}</p>
-    <span>{{ product.price | money }}</span>
-    
-    {% form 'product', product %}
-      <input type="hidden" name="id" value="{{ product.variants.first.id }}">
-      <button type="submit">Add to Cart</button>
-    {% endform %}
-  </div>
+    <div class="product-details">
+      <h2 class="product-title">Transformative Saundarya Night Cream</h2>
+      <p class="price"> {{ product.price | money }} </p>
+      <p class="discription">{{ product.discription  }}</p>
+      </div>
+  </a>
+  <form id="product-form-{{ product.id }}" action="/cart/add" method="post">
+  <input type="hidden" name="id" value="{{ product.variants.first.id }}">
+  <button id="add-to-cart-button-{{ product.id }}" class="add-to-cart" type="button">Add to Cart</button>
+</form>
 </div>
