second commit of the day

--- a/assets/header.css
+++ b/assets/header.css
@@ -89,7 +89,7 @@ nav {
 .address {
 	width: 240px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	height: 40px;
 	align-items: center;
 }
