--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -195,13 +195,13 @@ color: #fff;
     <p>SHOP BY</p>
    </div>
     <div class="footer-services">
-     <a href=""><p>Skin Care</p></a>
-     <a href=""><p>Hair Care</p></a>
-     <a href=""> <p>Makeup</p></a>
-    <a href=""> <p>Body Care</p></a>
-    <a href=""><p>Supplement</p></a>
-    <a href=""><p>Combos</p></a>
-    <a href=""><p>Gifting</p></a>
+      <a href="/collections/skin-care"><p>Skin Care</p></a>
+      <a href="/collections/hair-care"><p>Hair Care</p></a>
+      <a href="/collections/make-up"><p>Makeup</p></a>
+      <a href="/collections/body-care"> <p>Body Care</p></a>
+      <a href="/collections/supplement"><p>Supplement</p></a>
+      <a href="/collections/combos"><p>Combos</p></a>
+      <a href="/collections/gift"><p>Gifting</p></a>
     </div>
   </div>
   <div class="footer-details-box">
