--- a/sections/new-arrivels.liquid
+++ b/sections/new-arrivels.liquid
@@ -29,9 +29,11 @@
 
 <div class="more-product">
   <hr class="product-hr">
-  <div class="more">
+  <a class="more" href="/collections/new-arrivals">
+  <div>
     View All
   </div>
+  </a>
 </div>
 
 <script>
