--- a/sections/our-cat.liquid
+++ b/sections/our-cat.liquid
@@ -1,18 +1,19 @@
 <style>
-  .product2-link{
-    border: 2px solid white;
-  background: #fff;
-  height: 100%;
-  width: 380px;
-  flex: 0 0 auto;
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  justify-content: space-around;
-  box-shadow: 0 4px 8px #0003;
-  box-sizing: border-box;
-  margin: 0 10px;
-  }
+.product2-link { 
+	border: 2px solid white;
+	background: #fff;
+	height: 100%;
+	width: 380px;
+	flex: 0 0 auto;
+	display: flex;
+	position: relative;
+	flex-direction: column;
+	justify-content: space-around;
+	box-shadow: 0 4px 8px #0003;
+	box-sizing: border-box;
+	margin: 0 10px;
+	text-decoration: none;
+}
 </style>
 <div class="slider-title">
     <p>Explore</p>
@@ -93,9 +94,6 @@
 
 <div class="more-product">
   <hr class="product-hr">
-  <div class="more">
-    View All
-  </div>
 </div>
 
 <script>
