--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -31,9 +31,11 @@
 
 <div class="more-product">
   <hr class="product-hr">
-  <div class="more">
+  <a class="more" href="/collections/our-best-sellers">
+  <div>
     View All
   </div>
+  </a>
 </div>
 
 <script>
