--- a/assets/product-slider.css
+++ b/assets/product-slider.css
@@ -161,7 +161,7 @@ div.scroll-container::-webkit-scrollbar {
   margin: 30px auto;
   background: radial-gradient(#2e3d0b, rgba(110, 133, 54, 0.45));
 }
-
+ 
 .more {
   position: absolute;
   background: #fff;
@@ -178,6 +178,8 @@ div.scroll-container::-webkit-scrollbar {
   justify-content: center;
   font-size: 20px;
   cursor: pointer;
+  color: #000;
+  text-decoration: none;
 }
 
 .more:hover {
