--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -17,7 +17,11 @@
       </div>
       <button type="submit" name="update" value="Update Cart">Update Cart</button>
     </form>
-    <a href="/checkout" class="checkout-button">Proceed to Checkout</a>
+    {% if customer %}
+      <a href="/checkout" class="checkout-button">Proceed to Checkout</a>
+    {% else %}
+      <a href="/account/login" class="checkout-button">Login to Checkout</a>
+    {% endif %}
   {% else %}
     <p>Your cart is empty.</p>
   {% endif %}
