--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -199,7 +199,7 @@ color: #fff;
       <a href="/collections/hair-care"><p>Hair Care</p></a>
       <a href="/collections/make-up"><p>Makeup</p></a>
       <a href="/collections/body-care"> <p>Body Care</p></a>
-      <a href="/collections/supplement"><p>Supplement</p></a>
+      <a href="/collections/supplements"><p>Supplement</p></a>
       <a href="/collections/combos"><p>Combos</p></a>
       <a href="/collections/gift"><p>Gifting</p></a>
     </div>
