--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -53,7 +53,7 @@
             <img class="product-img" width="" height="" src="{{ image.src | img_url: 'large' }}" alt="{{ image.alt | escape }}">
           {% endfor %}
           <div class="product-details">
-            <h2 class="product-title">Transformative Saundarya Night Cream</h2>
+            <h2 class="product-title"></h2>
             <p class="price"> {{ product.price | money }} </p>
             <p class="discription">{{ product.discription  }}</p>
             </div>
